--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>resume of fengzhen</title>
     <link rel="stylesheet" href="./css/a.css">
+    <script src="//at.alicdn.com/t/font_595047_mmfdog94owghkt9.js"></script>
+    <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+    </style>
 </head>
 <body>
     <div class="topNavBar clearfix">
@@ -23,17 +32,19 @@
         </nav>
     </div>
 
-    <div class="banner" style="background-image: url()"></div> 
+    <div class="banner">
+        <div class="mask"></div>
+    </div> 
 
     <main>
         <div class="card">
-            <div class="pictureAndText">
+            <div class="pictureAndText clearfix">
                 <div class="picture">
-                    <img src="#" alt="头像">
+                    <img src="./image/avatar.jpg" alt="头像">
                 </div>
                 <div class="text">
                     <div class="profile">
-                        <span class="welcome">hello</span>
+                        <span class="welcome">hello <span class="triangle"></span></span>
                         <h1>石锋镇</h1>
                         <p>前端开发工程师</p>
                         <hr>
@@ -51,13 +62,21 @@
                 </div>
             </div>
             <footer>
-                <a href="#"><img src="#" alt="..."></a>
-                <a href="#"><img src="#" alt="..."></a>
-                <a href="#"><img src="#" alt="..."></a>
-                <a href="#"><img src="#" alt="..."></a>
-                <a href="#"><img src="#" alt="..."></a>
-                <a href="#"><img src="#" alt="..."></a>
-                <a href="#"><img src="#" alt="..."></a>
+                <a href="" src="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
+                </a>
+                <a href="#" src="">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-ego-blog"></use>
+                    </svg>
+                </a>
+                <a href="#" src="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-i-good"></use>
+                    </svg>
+                </a>
             </footer>
         </div>
         <div class="download">
