--- a/index.html
+++ b/index.html
@@ -79,43 +79,93 @@
                 </a>
             </footer>
         </div>
-        <div class="download">
-            <a href="">下载简历</a>
+        <div class="downloadResume">
+            <a href="../download/resume.pdf" target="_blank" download>下载简历</a>
         </div>
-        <p>
+        <p class="selfIntroduction">
             石锋镇：正在学习web开发<br>
             技能：前端开发，切图
         </p>
     </main> 
 
-    <section>
+    <section class="skills">
         <h2>技能</h2>
-        <ol>
-            <li>HTML5&amp;CSS3</li>
-            <li>Javascript</li>
-            <li>Jquery</li>
-            <li>vue</li>
-            <li>react</li>
-            <li>HTTP</li>
+        <ol class="clearfix">
+            <li>
+                <h3>HTML5&amp;CSS3</h3>
+                <div class="expBar">
+                    <div class="exp"></div>
+                </div>
+            </li>
+            <li>
+                <h3>Javascript</h3>
+                <div class="expBar">
+                    <div class="exp"></div>
+                </div>
+            </li>
+            <li>
+                <h3>jQuery</h3>
+                <div class="expBar">
+                    <div class="exp"></div>
+                </div>
+            </li>
+            <li>
+                <h3>vue</h3>
+                <div class="expBar">
+                    <div class="exp"></div>
+                </div>
+            </li>
+            <li>
+                <h3>React</h3>
+                <div class="expBar">
+                    <div class="exp"></div>
+                </div>
+            </li>
+            <li>
+                <h3>HTTP</h3>
+                <div class="expBar">
+                    <div class="exp"></div>
+                </div>
+            </li>
         </ol>
     </section>
 
-    <section>
+    <section class="works">
         <h2>作品集</h2>
         <nav>
             <ol>
-                <li>所有作品</li>
-                <li>框架作品</li>
-                <li>原生Javascript&amp;CSS3作品</li>
+                <li id="works1">所有</li>
+                <li id="works2">框架</li>
+                <li id="works3">原生Javascript&amp;CSS3</li>
             </ol>
+            <div class="decorationBar">
+                <div id="decorationItem" class="item item1"></div>
+            </div>
         </nav>
         <div class="jobs">
-                <div class="big"></div>
-                <div class="small"></div>
-                <div class="small"></div>
+            <div class="jobs1">
+                <img src="./image/1.jpg" alt="作品1">
             </div>
+            <div class="jobs2">
+                <img src="./image/2.jpg" alt="作品2">
+            </div>
+            <div class="jobs3">
+                <img src="./image/3.jpg" alt="作品3">
+            </div>
+        </div>
     </section>
 
+<script>
+    works1.onclick = function(){
+        decorationItem.className = "item item1";
+    }
+    works2.onclick = function(){
+        decorationItem.className = "item item2";
+    }
+    works3.onclick = function(){
+        decorationItem.className = "item item3";
+    }
+</script>
 
 </body>
 </html>
