--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
 <head>
     <meta charset="UTF-8">
     <title>resume of fengzhen</title>
-    <link rel="stylesheet" href="./css/a.css">
+    <link rel="stylesheet" href="./css/loading.css">
+    <link rel="stylesheet" href="./css/index.css">
     <script src="//at.alicdn.com/t/font_595047_mmfdog94owghkt9.js"></script>
     <style type="text/css">
         .icon {
@@ -15,19 +16,23 @@
     </style>
 </head>
 <body>
-    <div class="topNavBar clearfix">
+    <div id="siteWelcom" class="active">
+        <div class="loading"></div>
+    </div>
+
+    <div id="topNavBar" class="topNavBar clearfix">
         <div class="logo">
             <a href="#"><span class="rs">RS</span>&nbsp;<span class="card">card</span></a>
         </div>
         <nav>
             <ul class="clearfix">
-                <li><a href="#">关于</a></li>
-                <li><a href="#">技能</a></li>
-                <li><a href="#">作品</a></li>
-                <li><a href="#">博客</a></li>
-                <li><a href="#">日历</a></li>
-                <li><a href="#">联系方式</a></li>
-                <li><a href="#">其他</a></li>
+                <li><a href="#about">关于</a></li>
+                <li><a href="#skills">技能</a></li>
+                <li><a href="#works">作品</a></li>
+                <li><a href="#blog">博客</a></li>
+                <li><a href="#date">日历</a></li>
+                <li><a href="#contact">联系方式</a></li>
+                <li><a href="#other">其他</a></li>
             </ul>  
         </nav>
     </div>
@@ -36,7 +41,7 @@
         <div class="mask"></div>
     </div> 
 
-    <main>
+    <main id="about">
         <div class="card">
             <div class="pictureAndText clearfix">
                 <div class="picture">
@@ -88,7 +93,7 @@
         </p>
     </main> 
 
-    <section class="skills">
+    <section id="skills" class="skills">
         <h2>技能</h2>
         <ol class="clearfix">
             <li>
@@ -130,7 +135,7 @@
         </ol>
     </section>
 
-    <section class="works">
+    <section id="works" class="works">
         <h2>作品集</h2>
         <nav>
             <ol>
@@ -156,6 +161,51 @@
     </section>
 
 <script>
+    // loading动画
+    setTimeout(function(){
+        var siteWelcom = document.querySelector('#siteWelcom');
+        siteWelcom.classList.remove('active');
+    },2000);
+
+    // 顶部导航按钮，鼠标进入时下划线滑动出现
+    var li = document.querySelectorAll('#topNavBar nav ul li');
+    var li_length = li.length;
+    for (var i=0;i<li_length;i++){
+        li[i].onmouseenter = function (e){
+            e.currentTarget.classList.add('active');
+        };
+        li[i].onmouseleave = function (e){
+            e.currentTarget.classList.remove('active');
+        };
+    }
+
+    // 点击导航按钮，滚动到对应位置
+    var a = document.querySelectorAll('#topNavBar nav ul li a');
+    var a_length = a.length;
+    for (var i=0;i<a_length;i++){
+        a[i].onclick = function (e){
+            e.preventDefault();
+            var a = e.currentTarget;
+            var targetId = a.getAttribute('href');
+            var target = document.querySelector(targetId);
+            var offsetY = target.offsetTop;
+            window.scrollTo(0,offsetY-80);
+        };
+    }
+
+    // 页面滚动时，导航栏显现颜色
+    window.onscroll = function (){
+        var scrollY = window.scrollY;
+        if (scrollY===0){
+            var topNavBar = document.querySelector('#topNavBar');
+            topNavBar.classList.remove('scroll');
+        }else {
+            var topNavBar = document.querySelector('#topNavBar');
+            topNavBar.classList.add('scroll');
+        }
+    }
+
+    // 作品集导航按钮，点击时下划线滑动
     works1.onclick = function(){
         decorationItem.className = "item item1";
     }
@@ -165,6 +215,7 @@
     works3.onclick = function(){
         decorationItem.className = "item item3";
     }
+
 </script>
 
 </body>
