--- a/index.html
+++ b/index.html
@@ -27,8 +27,23 @@
         <nav>
             <ul class="clearfix">
                 <li><a href="#about">关于</a></li>
-                <li><a href="#skills">技能</a></li>
-                <li><a href="#works">作品</a></li>
+                <li>
+                    <a href="#skills">技能</a>
+                    <ul class="submenu">
+                        <li>技能1</li>
+                        <li>技能2</li>
+                        <li>技能3</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#works">作品</a>
+                    <ul class="submenu">
+                        <li>作品1</li>
+                        <li>作品2</li>
+                        <li>作品3</li>
+                        <li>作品4</li>
+                    </ul>
+                </li>
                 <li><a href="#blog">博客</a></li>
                 <li><a href="#date">日历</a></li>
                 <li><a href="#contact">联系方式</a></li>
