--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="mask"></div>
     </div> 
 
-    <main id="about">
+    <main id="about" data-x>
         <div class="card">
             <div class="pictureAndText clearfix">
                 <div class="picture">
@@ -109,7 +109,7 @@
         </p>
     </main> 
 
-    <section id="skills" class="skills">
+    <section id="skills" class="skills" data-x>
         <h2>技能</h2>
         <ol class="clearfix">
             <li>
@@ -151,7 +151,7 @@
         </ol>
     </section>
 
-    <section id="works" class="works">
+    <section id="works" class="works"data-x>
         <h2>作品集</h2>
         <nav>
             <ol>
@@ -204,15 +204,16 @@
             if((typeof set)!=="undefined"){
                 clearInterval(set);
             }
-            var a = e.currentTarget;
+            var a = e.currentTarget;                                 
             var targetId = a.getAttribute('href');
             var target = document.querySelector(targetId);
             var targetTop = target.offsetTop-80;
             var currentTop = window.scrollY;
-            var t = Math.abs((targetTop-currentTop)/100*100); //每100px滑动300ms
+            var t = Math.abs((targetTop-currentTop)/100*200); //每100px滑动300ms
             if(t>500){
                 t=500;
             }
+            
             function animate(time) {
                 requestAnimationFrame(animate);
                 TWEEN.update(time);
@@ -225,7 +226,7 @@
             var tween = new TWEEN.Tween(coords);
             tween
                 .to({y:targetTop},t)
-                .easing(TWEEN.Easing.Quadratic.In)
+                .easing(TWEEN.Easing.Quartic.InOut)
                 .onUpdate(function(){
                     window.scrollTo(0,coords.y);
                 })
@@ -233,8 +234,9 @@
         };
     }
 
-    // 页面滚动时，导航栏显现颜色
+    // 页面滚动时，导航栏高亮,对应模块的导航标签激活
     window.onscroll = function (){
+        //  导航栏高亮
         var scrollY = window.scrollY;
         if (scrollY===0){
             var topNavBar = document.querySelector('#topNavBar');
@@ -243,6 +245,42 @@
             var topNavBar = document.querySelector('#topNavBar');
             topNavBar.classList.add('scroll');
         }
+        // 导航标签激活高亮
+        var tag_with_data_x = document.querySelectorAll('[data-x]');
+        var nearest = 0;var y = window.scrollY;
+        for(let i=1;i<tag_with_data_x.length;i++){
+            if(Math.abs(tag_with_data_x[i].offsetTop-window.scrollY)<Math.abs(tag_with_data_x[nearest].offsetTop-window.scrollY)){
+                nearest = i;
+            }
+        }
+
+        var delay = setTimeout(function(){
+            if(Math.abs(window.scrollY-y)>30){
+                clearTimeout(delay);
+                return;
+            }
+            var id = tag_with_data_x[nearest].getAttribute("id");
+            var a = document.querySelector('a[href='+'"#'+id+'"]');
+            var li = a.parentNode;
+            var brothers = li.parentNode.childNodes;console.log(brothers)
+            for(let i=0;i<brothers.length;i++){
+                if(brothers[i].classList){
+                    brothers[i].classList.remove('highlight');
+                }    
+            }
+            li.classList.add('highlight');
+        },0);
+
+        // var id = tag_with_data_x[nearest].getAttribute("id");
+        // var a = document.querySelector('a[href='+'"#'+id+'"]');
+        // var li = a.parentNode;
+        // var brothers = li.parentNode.childNodes;console.log(brothers)
+        // for(let i=0;i<brothers.length;i++){
+        //     if(brothers[i].classList){
+        //         brothers[i].classList.remove('highlight');
+        //     }    
+        // }
+        // li.classList.add('highlight');
     }
 
     // 作品集导航按钮，点击时下划线滑动
