--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>
     <script src="//at.alicdn.com/t/font_595047_mmfdog94owghkt9.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
+    <script src="//cdn1.lncld.net/static/js/3.6.8/av-min.js"></script>
     <style type="text/css">
         .icon {
            width: 1em; height: 1em;
@@ -21,8 +22,8 @@
 <body>
     <!-- loading动画 -->
     <!-- <div id="siteWelcom" class="active">
-        <div class="loading"></div>
-    </div> -->
+            <div class="loading"></div>
+        </div> -->
 
     <div id="topNavBar" class="topNavBar clearfix">
         <div class="logo">
@@ -184,6 +185,28 @@
         </div>
     </section>
 
+    <section id="messageBoard" class="messageBoard">
+        <h2>聚言堂</h2>
+        <ol id = messageList>
+            <li>
+                <span>名字：</span>
+                <p>dfsdfsffsfsdfsfsfsfsfsfssklfjfklsdfjsdklfjsdklfjklsdj送扥森森森阿森啊森森阿斯扥as发送扥森森as发送扥三扥森啊森森扥阿瑟发撒阿森萨斯扥fklsjf</p>
+            </li>
+
+            <li>
+                    <span>名字：</span>
+                    <p>dfsdfsffsfsdfsfsfsfsfsfssklfjfklsdfjsdklfjsdklfjklsdjfklsjf</p>
+                </li>
+
+        </ol>
+        <form id = postMessage>
+                <textarea name="content" placeholder="开始留言吧。。。"></textarea>
+                <input type="text" name="name" placeholder="在这里留下您的大名">
+            <button type="submit">发表</button>
+            <div class="loading"></div>
+        </form>
+    </section>
+
 <script src="./js/top-nav-activate-by-mouse.js"></script>
 <script src="./js/auto-scroll-when-click-nav.js"></script>
 <script src="./js/sections-auto-slide-up.js"></script>
@@ -191,6 +214,7 @@
 <script src="./js/sticky-navbar.js"></script>
 <script src="./js/works-nav-activate-by-click.js"></script>
 <script src="./js/works-swiper-init.js"></script>
+<script src="./js/message.js"></script>
 
 
 <script>
