删除留言模板，留言全部从服务器获取

--- a/index.html
+++ b/index.html
@@ -187,18 +187,7 @@
 
     <section id="messageBoard" class="messageBoard">
         <h2>聚言堂</h2>
-        <ol id = messageList>
-            <li>
-                <span>名字：</span>
-                <p>dfsdfsffsfsdfsfsfsfsfsfssklfjfklsdfjsdklfjsdklfjklsdj送扥森森森阿森啊森森阿斯扥as发送扥森森as发送扥三扥森啊森森扥阿瑟发撒阿森萨斯扥fklsjf</p>
-            </li>
-
-            <li>
-                    <span>名字：</span>
-                    <p>dfsdfsffsfsdfsfsfsfsfsfssklfjfklsdfjsdklfjsdklfjklsdjfklsjf</p>
-                </li>
-
-        </ol>
+        <ol id = messageList></ol>
         <form id = postMessage>
                 <textarea name="content" placeholder="开始留言吧。。。"></textarea>
                 <input type="text" name="name" placeholder="在这里留下您的大名">
