给留言板加上自动滑入及导航滚动效果

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li><a href="#blog">博客</a></li>
                 <li><a href="#date">日历</a></li>
                 <li><a href="#contact">联系方式</a></li>
-                <li><a href="#other">其他</a></li>
+                <li><a href="#messageBoard">留言版</a></li>
             </ul>  
         </nav>
     </div>
@@ -185,7 +185,7 @@
         </div>
     </section>
 
-    <section id="messageBoard" class="messageBoard">
+    <section id="messageBoard" class="messageBoard" data-x>
         <h2>聚言堂</h2>
         <ol id = messageList></ol>
         <form id = postMessage>
