--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <section id="works" class="works"data-x>
         <h2>作品集</h2>
-        <nav>
+        <!-- <nav>
             <ol>
                 <li id="works1">所有</li>
                 <li id="works2">框架</li>
@@ -166,13 +166,15 @@
             <div class="decorationBar">
                 <div id="decorationItem" class="item item1"></div>
             </div>
-        </nav>
+        </nav> -->
         <div class="jobs">
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><a href="#"><img src="./image/works1.jpeg" alt=""></a></div>
-                    <div class="swiper-slide"><a href="#"><img src="./image/works2.jpeg" alt=""></a></div>
-                    <!-- <div class="swiper-slide"><a href="#"><img src="./image/works3" alt=""></a></div> -->
+                    <div class="swiper-slide"><a href="https://github.com/fzen/easy-search"><img src="./image/works1.jpeg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="https://github.com/fzen/canvas-demo"><img src="./image/works2.jpeg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="https://github.com/fzen/happy-mmall"><img src="./image/works3.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="https://fzen.github.io/Baymax/Baymax.html"><img src="./image/works4.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="http://fengzhenweb.top/todo/todo.html"><img src="./image/works5.jpg" alt=""></a></div>
                 </div>
                 <!-- 如果需要分页器 -->
                 <div class="swiper-pagination"></div>
