--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
                         <li>作品4</li>
                     </ul>
                 </li>
-                <li><a href="#blog">博客</a></li>
-                <li><a href="#date">日历</a></li>
-                <li><a href="#contact">联系方式</a></li>
                 <li><a href="#messageBoard">留言版</a></li>
             </ul>  
         </nav>
@@ -79,25 +76,23 @@
                             <dt>所在城市</dt>
                                 <dd>广州</dd>
                             <dt>邮箱</dt>
-                                <dd>xxxxxxxxxxx@qq.com</dd>
-                            <dt>手机</dt>
-                                <dd>12345678901</dd>
+                                <dd>1019846366@qq.com</dd>
                         </dl>
                     </div>
                 </div>
             </div>
             <footer>
-                <a href="" src="#">
+                <a href="https://github.com/fzen" title="github">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-github"></use>
                     </svg>
                 </a>
-                <a href="#" src="">
+                <a href="https://fzen.github.io/" title="博客">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-ego-blog"></use>
                     </svg>
                 </a>
-                <a href="#" src="#">
+                <a href="javascript:" title="点个赞！">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-i-good"></use>
                     </svg>
@@ -141,7 +136,7 @@
                 </div>
             </li>
             <li>
-                <h3>React</h3>
+                <h3>Webpack</h3>
                 <div class="expBar">
                     <div class="exp"></div>
                 </div>
@@ -203,7 +198,6 @@
 <script src="./js/sections-auto-slide-up.js"></script>
 <script src="./js/nav-highlight-when-scroll.js"></script>
 <script src="./js/sticky-navbar.js"></script>
-<script src="./js/works-nav-activate-by-click.js"></script>
 <script src="./js/works-swiper-init.js"></script>
 <script src="./js/message.js"></script>
 
